--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
             <div class="navbar">
                 <div>
-                    <div class="logo">BEST <span style="color: #ec1f46;">TOUR</span> PLAN
+                    <div class="logo">BEST <span>TOUR</span> PLAN
                     </div>
                     <div class="search-bar">
                         <input type="text" name="" id="" placeholder="Search Location">
@@ -501,7 +501,7 @@
                 </div>
                 <div>
                     <div class="search-bar">
-                        <input type="text" name="" id="" placeholder="Search Location">
+                        <input type="text" name="" id="" placeholder="Your email address">
                         <button type="submit" class="btn-search bg-secondary"><i class="fas fa-search"></i></button>
                     </div>
                 </div>
@@ -515,47 +515,150 @@
                     <h1>Other Activities</h1>
                 </div>
                 <div class="activities-grid">
-                <div class="other-activities">
-                    <p class="p-content">Tamarind falls hiking
-                        trip - full day
+                    <div class="other-activities">
+                        <p class="p-content">Tamarind falls hiking
+                            trip - full day
 
-                    </p>
-                    <p class="book-now bg-secondary">
-                        Book Now
-                    </p>
-                </div>
-                <div class="other-activities-2 ">
-                    <p class="p-content">Tamarind falls hiking
-                        trip - full day
+                        </p>
+                        <p class="book-now bg-secondary">
+                            Book Now
+                        </p>
+                    </div>
+                    <div class="other-activities-2 ">
+                        <p class="p-content">Tamarind falls hiking
+                            trip - full day
 
-                    </p>
-                    <p class="book-now bg-secondary">
-                        Book Now
-                    </p>
-                </div>
-                <div class="other-activities ">
-                    <p class="p-content">Tamarind falls hiking
-                        trip - full day
+                        </p>
+                        <p class="book-now bg-secondary">
+                            Book Now
+                        </p>
+                    </div>
+                    <div class="other-activities ">
+                        <p class="p-content">Tamarind falls hiking
+                            trip - full day
 
-                    </p>
-                    <p class="book-now bg-secondary">
-                        Book Now
-                    </p>
-                </div>
-                <div class="other-activities-2 ">
-                    <p class="p-content">Tamarind falls hiking
-                        trip - full day
+                        </p>
+                        <p class="book-now bg-secondary">
+                            Book Now
+                        </p>
+                    </div>
+                    <div class="other-activities-2 ">
+                        <p class="p-content">Tamarind falls hiking
+                            trip - full day
 
-                    </p>
-                    <p class="book-now bg-secondary">
-                        Book Now
-                    </p>
+                        </p>
+                        <p class="book-now bg-secondary">
+                            Book Now
+                        </p>
+                    </div>
                 </div>
-            </div>
 
             </div>
         </div>
     </section>
+    <!-- Footer -->
+    <section id="footer">
+        <div class="footer">
+            <div class="item1">
+                <p>Best</p>
+                <p><span>Tour</span></p>
+                <p>Plan</p>
+            </div>
+            <div class="item2">
+                <h3>ALL CATEGORIES</h3>
+                <ul>
+                    <li>All Deals</li>
+                    <li>Hotels</li>
+                    <li>Activities</li>
+                    <li>Spa Packages</li>
+                    <li>Hotel Day Packages</li>
+                    <li>Restaurants</li>
+                    <li>Fitness</li>
+                    <li>Rodrigues</li>
+                </ul>
+            </div>
+            <div class="item3">
+                <div>
+                    <h3>ADDITIONAL INFORMATION</h3>
+                    <ul>
+                        <li>About Us</li>
+                        <li>Contact Us</li>
+                        <li>How does it work?</li>
+                        <li>Frequently Asked Questions</li>
+                        <li>Deals.mu loyalty program </li>
+                        <li>Promote your Business on BTP</li>
+                    </ul>
+                </div>
+                <div class="py1 flex">
+                    <h3>Social Network</h3>
+                    <div>
+                        <i class="fab fa-facebook"></i>
+                        <i class="fab fa-youtube"></i>
+                        <i class="fab fa-instagram"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="item4">
+                <h3>LEGAL INFORMATION</h3>
+                <ul>
+                    <li>Terms & Conditions </li>
+                    <li>Disclaimer</li>
+                    <li>Cancellation policy</li>
+                    <li>Privacy</li>
+                </ul>
+            </div>
+            <div class="item5">
+                <h3>Contact Details</h3>
+                <span>Feel free to contact us by phone, email or by our contact form</span>
+                <ul>
+                    <li><i class="fas fa-map-marker-alt"></i><span> 9748 Blossom Hill Rd undefined Lansing, Idaho 68545
+                            United
+                            States</span></li>
+                    <li><i class="fas fa-phone-volume"></i>
+                        Tel (business hours) : 269 1500
+                        <p>Tel (hotline) Monday -
+                            Saturday:
+                            52-56-61-38 (08:00 am – 20:00 pm)
+                        </p>
+                        <p>
+                            Tel (hotline) Sunday: 52-56-61-38 (08:00 am – 14:00 pm) </p>
+                    </li>
+                    <li><i class="far fa-envelope"></i><span>cherly.lawson@example.com</span></li>
+                </ul>
+            </div>
+            <div class="item6">
+                <h3>SEND US A MESSAGE</h3>
+                <form action="" method="post">
+                    <p>
+                        <input type="text" name="name" id="" placeholder="Your Full Name*">
+                        <input type="text" name="phone" id="" placeholder="Phone Number*">
+                    </p>
+                    <p ><textarea class="my-1" name="message" id="" cols="30" rows="8" placeholder="Message"></textarea></p>
+                    <div class="flex">
+                        <button class="btn bg-secondary">
+                            Send
+                        </button>
+                    <p class="required">* Required Fields</p>
+                    </div>
+                </form>
+            </div>
+            <div class="item7">
+                <ul class="flex">
+                    <li>Disclaimer</li>
+                    <li>Conditions of use</li>
+                    <li>Cancellation policy</li>
+                </ul>
+            </div>
+            <div class="item8">
+                <i class="fab fa-cc-amex"></i>
+                <i class="fab fa-cc-apple-pay"></i>
+                <i class="fab fa-cc-amazon-pay"></i>
+                <i class="fab fa-cc-paypal"></i>
+                <i class="fab fa-cc-mastercard"></i>
+            </div>
+        </div>
+    </section>
+
     <script src="js/main.js"></script>
     <!-- Google Maps -->
     <script defer
